<resources>
    <string name="app_name">KTK</string>
    <string name="app_title">Timetable</string>
    <string name="branch_header_subtitle">Choose a branch</string>
    <string name="courses_title">Courses</string>
    <string name="teachers_title">Teachers</string>
    <string name="teacher_tab">Teachers</string>
    <string name="classrooms_title">Classrooms</string>
    <string name="classroom_day">Today · %1$s</string>
    <string name="classroom_day_today">Today · %1$s</string>
    <string name="classroom_day_tomorrow">Tomorrow · %1$s</string>
    <string name="classroom_day_yesterday">Yesterday · %1$s</string>
    <string name="classroom_day_other">%1$s</string>
    <string name="classroom_previous_day">Previous day</string>
    <string name="classroom_next_day">Next day</string>
    <string name="classroom_loading">Loading college timetable…</string>
    <string name="classroom_not_found">No lessons today</string>
    <string name="classroom_not_found_day">No lessons on this day</string>
    <string name="classroom_lesson_count">Lessons: %1$d</string>
    <string name="course_number">Course %1$d</string>

    <string name="back_button">Back</string>
    <string name="previous_week">Previous week</string>
    <string name="next_week">Next week</string>
    <string name="toggle_mode">Switch student / teacher mode</string>
    <string name="theme_button">Theme</string>

    <string name="add_widget">Timetable</string>
    <string name="app_widget_description">The widget displays the schedule for students for today</string>
    <string name="app_widget_teacher_description">The widget displays the schedule for teachers for today</string>

    <string name="title_timetable">Timetable</string>
    <string name="theme_picker">Theme</string>
    <string name="theme_title">Choose theme</string>
    <string name="theme_system">System</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_oled">OLED (black)</string>

    <string name="lesson_cancelled">Cancelled</string>

    <string name="news_date">Date</string>

    <string name="course_string">1st Course</string>

    <string name="lesson_title">Design and design of information systems</string>
    <string name="lesson_number" translatable="false">1</string>
    <string name="lesson_time" translatable="false">00:00</string>
    <string name="lesson_classroom" translatable="false">3.10</string>
    <string name="lesson_teacher" translatable="false">Гринь Д. Х.</string>

    <string name="placeholder" translatable="false">Placeholder</string>

    <string name="toast_unknown_error">An unknown error has occurred</string>
    <string name="toast_timetable_error">Couldn\'t get a timetable</string>
    <string name="toast_courses_error">Failed to get courses</string>
    <string name="toast_branch_error">Couldn\'t get a list of branches</string>
    <string name="toast_teacher_error">Could not get a list of teachers</string>
    <string name="toast_timetable_updated">The timetable has been updated</string>
    <string name="toast_offline_timetable">No connection. Saved timetable is shown</string>
</resources>